1999-07-07  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/StringBuffer/StringBufferTest.java
	(test_append): Run null tests.
	* gnu/testlet/java/lang/String/StringTest.java (test_Basics):
	Don't disable null String test.
	* gnu/testlet/java/lang/Class/ClassTest.java: Removed `CYGNUS'
	comments.  Fixed debugging prints to use test harness.
	(test_ComponentType): Uncommented.
	(testall): Call test_ComponentType and test_getClassloader.
	(test_getResource): Uncommented body.

1999-07-05  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (harnesso_files): New macro.
	(SimpleTestHarness_LDADD): Added harnesso_files.
	(SimpleTestHarness): New target.

	* Makefile.in: Rebuilt.
	* Makefile.am ($(javao_files)): New conditional target.
	(STAMP): New macro.
	(SimpleTestHarness_DEPENDENCIES): Use it.
	(%.o:%.class): Now conditional.
	(%.o:%.java): New pattern.
	(check_DATA): Use $(STAMP).
	* configure: Rebuilt.
	* configure.in: If --with-gcj given, then default JAVAC to `gcj -C'.
	Added --enable-classes.

1999-07-05  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/io/Utf8Encoding/mojo.java: New file.  From
	"Mojo Jojo" <mojojojo@pacbell.net>.

1999-06-21  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest.java:
	Set up thread like test_echo().
	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoTimeoutServer.java:
	Revert harness.fail instances to println's per original.  Don't sleep.
	* gnu/testlet/java/net/ServerSocket/BasicSocketServer.java:
	Revert harness.fail instances to println's per original.
	* gnu/testlet/java/net/ServerSocket/MyBasicSocketServer.java: ditto.

1999-06-11  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/Socket/SocketTest.java: Added harness.check
	calls.
	(test_Basics): Changed from unreachable host to mothership.

1999-06-10  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/io/DataInputStream/readLine.java (test):
	Add casts to byte for instances of '\n', '\r'.