@@ -1,3 +1,8 @@
+1999-07-12  Warren Levy  <warrenl@cygnus.com>
+
+	* gnu/testlet/java/net/URLConnection/MyURLConnection.java (connect):
+	Removed unnecessary imports and unreachable code.
+
 1999-07-07  Tom Tromey  <tromey@cygnus.com>
 
 	* gnu/testlet/java/lang/StringBuffer/StringBufferTest.java
